tests/positive/bool_literal.lator
a is true
b is false
c is users where active == true
