tests/negative/cmp_chain.lator
r is u where a < b < c
